# cloud-custodian

./: Makefile  requirements-dev.txt
c7n/: commands.py
c7n/resources/: __init__.py
docker/: cli  cli-distroless  mailer  mailer-distroless  org  org-distroless  policystream  policystream-distroless
tests/: test_docker.py  test_packaging.py
tools/c7n_ibmcloud/: pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_ibmcloud/c7n_ibmcloud/: client.py  entry.py  provider.py  query.py
tools/c7n_ibmcloud/c7n_ibmcloud/resources/: __init__.py  resource_map.py  virtual_server.py
tools/c7n_ibmcloud/examples/: vm.yml
tools/dev/: dockerpkg.py
