[tool.poetry]
name = "c7n_ibmcloud"
version = "0.1.0"
description = "Cloud Custodian - IBMCloud Provider"
readme = "readme.md"
authors = ["Cloud Custodian Project"]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
license = "Apache-2.0"
classifiers = [
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.6"
ibm_cloud_sdk_core = "^3.11.3"

[tool.poetry.dev-dependencies]
c7n = {path = "../..", develop = true}
pytest = "~6.0.0"
vcrpy = "^4.0.2"


[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"